<resources>
    <string name="app_name">Tessuro</string>

    <!-- drawer -->
    <string name="home_page">Home</string>
    <string name="profile">Profile</string>
    <string name="quiz_preferences">Update Quiz Preferences</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Divider -->
    <style name="Divider">
        <item name="android:background">?android:attr/listDivider</item>
    </style>

    <style name="Divider.Horizontal" parent="Divider">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">1dp</item>

    </style>

    <style name="Divider.Vertical" parent="Divider">
        <item name="android:layout_width">1dp</item>
        <item name="android:layout_height">match_parent</item>
    </style>

    <!-- Authentication -->
    <string name="fullname">Full Name</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="admin_user">Admin User</string>
    <string name="standard_user">Standard User</string>

    <!-- Welcome Activity -->
    <string name="welcomeMessage">Welcome to Tessuro! A quiz system for both instructors and students</string>

    <!-- Profile fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_fullname">Update Name</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="update_pass">Update Password</string>
    <string name="select_image">Select Image</string>
    <string name="update_image">Update Image</string>

    <!-- Help fragment -->
    <string name="help_message">Error 404\nHelp information not found</string>

    <!-- About us Fragment -->
    <string name="aboutUsMessage">Creators:\nOmar Perez \nMurtuza Bharoocha\n\nCECS 453\nAJ Fahim</string>

    <!-- Student HomePage Fragment -->
    <string name="key">Key</string>
    <string name="submit">Submit</string>
    <string name="Test">Test</string>
    <!-- Custom Popup -->
    <string name="popupmessage">Enter the Email Address and Key Provided by the Instructor</string>

    <string name="admin_quiz">Create a Quiz</string>
    <string name="enter_quiz_name">Enter Quiz Name</string>
    <string name="enter_quiz_key">Enter a Quiz Key</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="next_step">Next Step</string>
    <string name="number_of_questions">Enter Number of Questions</string>
    <string name="build_your_quiz">Build Your Quiz</string>
    <string name="take_a_quiz">Take a Quiz!</string>
    <string name="quiz_time_in_minutes">Quiz Time in Minutes</string>
    <string name="true_false">T/F</string>
    <string name="mix">Mix</string>
    <string name="multiple_choice">MC</string>
    <string name="question">Question</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="quiz_true">True</string>
    <string name="quiz_false">False</string>
    <string name="quiz_information">Quiz Information</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="submit_quiz">Submit Quiz</string>

    <!-- Take Quiz Strings -->
    <string name="your_answer">Your Answer: </string>
    <string name="currently_not_implemented">Currently Not Implemented</string>
    <string name="quiz_history">Quiz History</string>
    <string name="authorization">Authorization</string>

</resources>
