<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="50dp"
    android:paddingBottom="20dp"
    android:background="@color/colorTessuroBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/questionViewNumber_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:layout_gravity="center_horizontal"
        android:text="Question x"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/questionViewQuestion_textField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:hint="@string/question"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorTessuroPrimary"
        app:counterMaxLength="220"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/colorTessuroPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/questionViewQuestion_textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLength="220"
            android:maxLines="6"
            android:scrollbarFadeDuration="4000"
            android:scrollbarSize="2dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/correct_answer"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/questionViewTrueFalse_radioGroup"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retypePass_textField">

        <RadioButton
            android:id="@+id/questionViewTrue_radioButton"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorTessuroPrimary"
            android:text="@string/quiz_true"
            app:useMaterialThemeColors="false" />

        <RadioButton
            android:id="@+id/questionViewFalse_radioButton"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorTessuroPrimary"
            android:text="@string/quiz_false" />

    </RadioGroup>
</LinearLayout>