<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".views.dashboard.home.HomeAdminFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tessuro_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="25dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/quiz" />

        <TextView
            android:id="@+id/adminQuizSlogan_textView"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:text="@string/admin_quiz"
            android:textAlignment="center"
            android:textColor="@color/colorTessuroPrimary"
            android:textSize="25sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createQuizName_textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="311dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_quiz_name"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorTessuroPrimary"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/colorTessuroPrimary"
            app:startIconDrawable="@drawable/ic_quiz">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createQuizKey_textField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="311dp"
        android:layout_height="68dp"
        android:hint="@string/enter_quiz_key"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorTessuroPrimary"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/colorTessuroPrimary"
        app:startIconDrawable="@drawable/ic_quiz_key">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="10"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createQuizNumQues_textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="311dp"
            android:layout_height="68dp"
            android:hint="@string/number_of_questions"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorTessuroPrimary"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/colorTessuroPrimary"
            app:startIconDrawable="@drawable/ic_number_questions">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/quizGroup_radioGroup"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/retypePass_textField">

            <RadioButton
                android:id="@+id/trueFalse_radioButton"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorTessuroPrimary"
                android:checked="true"
                android:text="T/F"
                app:useMaterialThemeColors="false" />

            <RadioButton
                android:id="@+id/multipleChoice_radioButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorTessuroPrimary"
                android:text="MC" />

            <RadioButton
                android:id="@+id/mix_radioButton"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorTessuroPrimary"
                android:text="Mix" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createQuizNext_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:minHeight="60dp"
            android:text="@string/next_step"
            android:textSize="16sp"
            app:backgroundTint="@color/colorTessuroPrimary"
            app:icon="@drawable/ic_next"
            app:iconGravity="textEnd" />
    </LinearLayout>
</ScrollView>

