<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="horizontal"
    tools:context=".views.intro.WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorTessuroBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/tessuro_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/tessuro"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/progressbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/slogan_textView"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/welcomeMessage"
            android:textAlignment="center"
            android:textColor="@color/colorTessuroPrimary"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tessuro_logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="60dp"
            android:text="@string/login"
            android:textSize="16sp"
            app:backgroundTint="@color/colorTessuroPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slogan_textView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:minHeight="60dp"
            android:text="@string/register"
            android:textSize="16sp"
            app:backgroundTint="@color/colorTessuroPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

