<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTessuroBackground"
    tools:context=".views.dashboard.profile.ProfileInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutProfileInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTessuroPrimary"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/updateTessuro_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/tessuro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateFullname_textView"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:hint="@string/update_fullname"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/colorTessuroPrimary"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/colorTessuroPrimary"
                app:startIconDrawable="@drawable/ic_fullname">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusedByDefault="true"
                    android:inputType="text"
                    android:maxLength="35" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateFullname_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:text="@string/update_fullname"
                android:textSize="16sp"
                app:backgroundTint="@color/colorTessuroPrimary"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="197dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@android:color/darker_gray" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateCurrPass_textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:hint="@string/current_pass"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/colorTessuroPrimary"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/colorTessuroPrimary"
                app:startIconDrawable="@drawable/ic_current_password"
                tools:layout_editor_absoluteX="17dp"
                tools:layout_editor_absoluteY="69dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateNewPass_textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/new_pass"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/colorTessuroPrimary"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/colorTessuroPrimary"
                app:startIconDrawable="@drawable/ic_password"
                tools:layout_editor_absoluteX="17dp"
                tools:layout_editor_absoluteY="69dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updatePass_textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/retype_password"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/colorTessuroPrimary"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/colorTessuroPrimary"
                app:startIconDrawable="@drawable/ic_password"
                tools:layout_editor_absoluteX="17dp"
                tools:layout_editor_absoluteY="69dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updatePass_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:text="@string/update_pass"
                android:textSize="16sp"
                app:backgroundTint="@color/colorTessuroPrimary"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="197dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:layout_width="311dp"
                android:layout_height="311dp"
                android:src="@drawable/image_placeholder"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateSelectImage_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:minHeight="60dp"
                android:text="@string/select_image"
                android:textSize="16sp"
                app:backgroundTint="@color/colorTessuroPrimary"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="197dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateImage_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:text="@string/update_image"
                android:textSize="16sp"
                app:backgroundTint="@color/colorTessuroPrimary"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="197dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
